# zed

./: Cargo.toml
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json
assets/settings/: default.json
crates/editor/src/: cursor_trail.rs  editor.rs  editor_settings.rs  element.rs  jump.rs
crates/jump/: Cargo.toml  README.md
crates/jump/src/: jump.rs  jump_settings.rs
crates/settings/src/: settings_content.rs  vscode_import.rs
crates/settings_content/src/: editor.rs  settings_content.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
